<resources>
    <string name="app_name">MovieZ</string>
    <string name="movies_list">Movies List</string>
    <string name="try_again">Try again</string>
    <string name="released_at">Released at</string>
    <string name="search_hint">Search...</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="no_data_found">No data found</string>
    <string name="tagline">Tagline :</string>
    <string name="status">Status :</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="most_popular_actors">⭐️ Most popular actors</string>
    <string name="most_popular_directors">⭐️ Most popular directors</string>
    <string name="wishlist">Wishlist</string>
</resources>